change homepage value

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": "https://alexES13.github.io/alexES13.github.io",
+  "homepage": "https://alexES13.github.io",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
